[gd_scene load_steps=2 format=3 uid="uid://bsva7pa40gr5l"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_ofwh7"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofwh7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 18)
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 18)
layout_mode = 2
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 105
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = -155
theme_override_constants/margin_bottom = 150

[node name="FullscreenButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_font_sizes/font_size = 6
action_mode = 0
text = "Fullscreen"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
